# osu_analysis

./: .gitignore  .gitmodules  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test.py
analysis/: utils.py
analysis/mania/: action_data.py  map_metrics.py  score_data.py
analysis/std/: map_data.py  map_metrics.py  replay_data.py  score_data.py
demos/: demo0.py  demo1.py  demo2.py  demo3.py  demo4.py
osu_analysis/mania/: map_metrics.py  score_data.py
osu_analysis/std/: replay_data.py  replay_metrics.py  score_data.py
scripts/: clean.bat  demo.bat  refresh.bat  setup.bat  test.bat
src/: __init__.py
src/mania/: map_metrics.py
src/std/: map_patterns.py  replay_data.py  score_data.py  score_metrics.py
test/: run.py
test/unit_tests/: test_analysis.py  test_mania_action_data.py  test_mania_metric_data.py  test_mania_score_data.py  test_mania_score_data_press.py  test_std_map_data.py  test_std_map_metrics.py  test_std_map_patterns.py  test_std_replay_data.py  test_std_score_data.py  test_std_score_data_free.py  test_std_score_data_hold.py  test_std_score_data_press.py  test_std_score_data_release.py  test_std_score_metrics.py
unit_tests/: test_analysis.py  test_mania_action_data.py  test_mania_metric_data.py  test_mania_score_data.py  test_mania_score_data_press.py  test_std_map_data.py  test_std_map_metrics.py  test_std_map_patterns.py  test_std_replay_data.py  test_std_score_data.py  test_std_score_data_free.py  test_std_score_data_hold.py  test_std_score_data_press.py  test_std_score_data_release.py  test_std_score_metrics.py
(+28 files in other folders)
